Adjusted CSS for the HotelCards

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
             <button class="button-24" role="button"> Login</button>
         </div>
     </nav>
-    <main>
+    <main> 
+        <p id="text">Over 1,000 places</p>
         <div class="container">
             <div id="hotels"></div>
         </div>
